# Math_problem_to_python_porgram

./: .env  app.py  pag.ipynb  utils.py
meta_round_1/: README.md  pyproject.toml  report.md
meta_round_1/src/meta_round_1/: crew.py  main.py  solve_problem.md  test.md  test.py  utils.py
meta_round_1/src/meta_round_1/config/: agents.yaml  tasks.yaml
meta_round_1/src/meta_round_1/maker/: image_558996120123959_uri.txt  maker.py  statement.txt
meta_round_1/tests/: test.py
